--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint:script": "eslint . --fix --ignore-path .gitignore",
-    "lint:style": "stylelint **/*.{css,sass,scss,vue} --fix",
+    "lint:style": "stylelint **/*.{css,sass,scss,vue} --fix --ignore-path .gitignore",
     "lint": "run-s -c lint:script lint:style",
     "format": "prettier --write . --ignore-path .gitignore",
     "spell": "cspell lint --words-only --unique --dot --gitignore \"**/*.{cjs,cts,js,jsx,mjs,mts,ts,tsx,vue,sass,scss,css}\"",
@@ -21,8 +21,8 @@
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.1",
-    "vuetify": "^3.3.1",
+    "vue-router": "^4.2.2",
+    "vuetify": "^3.3.2",
     "webfontloader": "^1.6.28",
     "zod": "^3.21.4"
   },
@@ -33,24 +33,24 @@
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.16",
     "@types/webfontloader": "^1.6.35",
-    "@typescript-eslint/parser": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-airbnb-with-typescript": "^7.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
     "cspell": "^6.31.1",
-    "eslint": "^8.41.0",
+    "eslint": "^8.42.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^9.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
-    "stylelint": "^15.6.2",
+    "stylelint": "^15.7.0",
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-vuetify": "^1.0.2",
     "vue-tsc": "^1.6.5",
