--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mxg-website",
+  "name": "capital-follower-client",
   "version": "0.0.0",
   "private": true,
   "license": "UNLICENSED",
@@ -18,22 +18,24 @@
   },
   "dependencies": {
     "@mdi/font": "latest",
+    "@vueuse/core": "^10.1.2",
     "lodash-es": "^4.17.21",
-    "pinia": "^2.1.3",
+    "pinia": "^2.1.4",
+    "pocketbase": "^0.15.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
-    "vuetify": "^3.3.2",
+    "vuetify": "^3.3.3",
     "webfontloader": "^1.6.28",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@modyfi/vite-plugin-yaml": "^1.0.4",
-    "@rushstack/eslint-patch": "^1.3.0",
+    "@rushstack/eslint-patch": "^1.3.1",
     "@tsconfig/node18": "^2.0.1",
     "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.16.16",
+    "@types/node": "^18.16.18",
     "@types/webfontloader": "^1.6.35",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.11",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-airbnb-with-typescript": "^7.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
@@ -46,7 +48,7 @@
     "eslint-plugin-vue": "^9.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
-    "sass": "^1.62.1",
+    "sass": "^1.63.4",
     "stylelint": "^15.7.0",
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
